support plugin SharedService, add fastjson-demo-plugin/bytekit-demo-plugin. #21

--- a/one-java-agent-plugin/src/main/resources/META-INF/services/com.alibaba.oneagent.service.Component
+++ b/one-java-agent-plugin/src/main/resources/META-INF/services/com.alibaba.oneagent.service.Component
@@ -1,2 +1,3 @@
 com.alibaba.oneagent.service.TransformerManagerImpl
 com.alibaba.oneagent.service.ClassLoaderHandlerManagerImpl
+com.alibaba.oneagent.plugin.share.SharedServiceImpl
