--- a/one-java-agent-plugin/src/main/resources/META-INF/services/com.alibaba.oneagent.service.Component
+++ b/one-java-agent-plugin/src/main/resources/META-INF/services/com.alibaba.oneagent.service.Component
@@ -1,3 +1,4 @@
 com.alibaba.oneagent.service.TransformerManagerImpl
 com.alibaba.oneagent.service.ClassLoaderHandlerManagerImpl
 com.alibaba.oneagent.plugin.share.SharedServiceImpl
+com.alibaba.oneagent.service.OneAgentInfoServiceImpl
